--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <ul class="list container">
         <li class="work-factory">
           <div class="fon-dop-img">
-            <img src="./images/Vector.jpg" width="60" altr="доп-картинка" />
+            <img src="./images/Vector.png" width="60" altr="доп-картинка" />
           </div>
           <b class="work-main">Внимание к деталям</b>
           <p class="work-secondary">
@@ -73,7 +73,7 @@
         </li>
         <li class="work-factory">
           <div class="fon-dop-img">
-            <img src="./images/Vector (1).jpg" width="60" altr="доп-картинка" />
+            <img src="./images/Vector (1).png" width="60" altr="доп-картинка" />
           </div>
           <b class="work-main">Пунктуальность</b>
           <p class="work-secondary">
@@ -83,7 +83,7 @@
         </li>
         <li class="work-factory">
           <div class="fon-dop-img">
-            <img src="./images/Vector (2).jpg" width="60" altr="доп-картинка" />
+            <img src="./images/Vector (2).png" width="60" altr="доп-картинка" />
           </div>
           <b class="work-main">Планирование</b>
           <p class="work-secondary">
@@ -93,7 +93,7 @@
         </li>
         <li class="work-factory">
           <div class="fon-dop-img">
-            <img src="./images/Vector (3).jpg" width="60" altr="доп-картинка" />
+            <img src="./images/Vector (3).png" width="60" altr="доп-картинка" />
           </div>
           <b class="work-main">Современные технологии</b>
           <p class="work-secondary">
@@ -171,13 +171,67 @@
     </section>
     <section>
       <h2 class="head-text">Постоянные клиенты</h2>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+      <ul class="list clients container">
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo.png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo (1).png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo (2).png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo (3).png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo (4).png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
+        <li>
+          <button class="best-clients">
+            <img
+              class="best-clients-logo"
+              src="./images/Logo (5).png"
+              width="106"
+              alt="лого"
+            />
+          </button>
+        </li>
       </ul>
     </section>
   </main>
