--- a/portfolio.html
+++ b/portfolio.html
@@ -4,26 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="vievport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-  />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-  <header>
-    <div class="container header">
-      <!-- <logo> -->
-      <a href="./images/webStudio.jpg" class="logo heder"
-        >Web<span class="studio">Studio</span></a
-      >
-      <!-- <nav> -->
-      <nav>
-        <ul class="site-nav list">
+  <header class="">
+    <div class="conteiner main-meny">
+      <nav class="nav">
+        <!-- <logo> -->
+        <a href="./images/webStudio.jpg" class="logo">Web<span class="studio">Studio</span></a>
+        <!-- <title> -->
+        <ul  class="site-nav list">
           <li class="item">
             <a href="./index.html" class="link">Студия</a>
           </li>
@@ -31,149 +23,120 @@
             <a href="./portfolio.html" class="link curent">Портфолио</a>
           </li>
           <li class="item">
-            <a href="./contacts.html" class="link">Контакты</a>
+            <a href="/" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <!-- auth -->
-      <ul class="site-auth list">
-        <li class="item">
-          <a href="emailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="item">
-          <a href="tel=+380991111111" class="link">+380991111111</a>
-        </li>
-      </ul>
+        <!-- auth -->
+        <ul class="site-auth list">
+          <li class="item">
+            <a href="emailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a href="tel=+380991111111" class="link">+380991111111</a>
+          </li>
+        </ul>
     </div>
   </header>
 
   <!-- list -->
   <main>
-    <section class="button">
-      <ul class="list container main">
-        <li><button type="button" class="secondary">Всё</button></li>
-        <li><button type="button" class="secondary">Веб-сайты</button></li>
-        <li><button type="button" class="secondary">Приложения</button></li>
-        <li><button type="button" class="secondary">Дизайн</button></li>
-        <li><button type="button" class="secondary">Маркетинг</button></li>
-      </ul>
+    <section class="button conteiner two-page">
+        <ul class="list main">
+          <li class="item"><button type="button" class="secondary">Всё</button></li>
+          <li class="item"><button type="button" class="secondary">Веб-сайты</button></li>
+          <li class="item"><button type="button" class="secondary">Приложения</button></li>
+          <li class="item"><button type="button" class="secondary">Дизайн</button></li>
+          <li class="item"><button type="button" class="secondary">Маркетинг</button></li>
+        </ul>
 
-      <!-- content -->
-      <ul class="list container content-two-page">
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio1.jpg" width="370" alt="ноутбук" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Технокряк</h3>
-              <p class="photo-secondary">Веб-сайт</p>
-            </div>
+    <!-- content -->
+      <ul  class="list photo-t-p">
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio1.jpg" Width="370" alt="ноутбук" />
+            <dt class="photo-main">Технокряк</dt>
+            <p class="photo-secondary">Веб-сайт</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio2.jpg" width="370" alt="игра" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Постер New Orlean vs Golden Star</h3>
-              <p class="photo-secondary">Дизайн</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio2.jpg" Width="370" alt="игра" />
+            <dt class="photo-main">Постер New Orlean vs Golden Star</dt>
+            <p class="photo-secondary">Дизайн</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio3.jpg" width="370" alt="принт" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Ресторан Seafood</h3>
-              <p class="photo-secondary">Приложение</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio3.jpg" Width="370" alt="принт" />
+            <dt class="photo-main">Ресторан Seafood</dt>
+            <p class="photo-secondary">Приложение</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio4.jpg" width="370" alt="наушники" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Проект Prime</h3>
-              <p class="photo-secondary">Маркетинг</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio4.jpg" Width="370" alt="наушники" />
+            <dt class="photo-main">Проект Prime</dt>
+            <p class="photo-secondary">Маркетинг</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio5.jpg" width="370" alt="коробки" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Проект Boxes</h3>
-              <p class="photo-secondary">Приложение</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio5.jpg" Width="370" alt="коробки" />
+            <dt class="photo-main">Проект Boxes</dt>
+            <p class="photo-secondary">Приложение</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio6.jpg" width="370" alt="монитор" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Inspiration has no Borders</h3>
-              <p class="photo-secondary">Веб-сайт</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio6.jpg" Width="370" alt="монитор" />
+            <dt class="photo-main">Inspiration has no Borders</dt>
+            <p class="photo-secondary">Веб-сайт</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio7.jpg" width="370" alt="каталог" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Издание Limited Edition</h3>
-              <p class="photo-secondary">Дизайн</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio7.jpg" Width="370" alt="каталог" />
+            <dt class="photo-main">Издание Limited Edition</dt>
+            <p class="photo-secondary">Дизайн</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio8.jpg" width="370" alt="лейбл" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Проект LAB</h3>
-              <p class="photo-secondary">Маркетинг</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio8.jpg" Width="370" alt="лейбл"/>
+            <dt class="photo-main">Проект LAB</dt>
+            <p class="photo-secondary">Маркетинг</p>
           </a>
         </li>
-        <li class="photo-text">
-          <a href="/" class="photo-imag">
-            <img src="./images/portfolio9.jpg" width="370" alt="робота" />
-            <div class="text-info-photo">
-              <h3 class="photo-main">Growing Business</h3>
-              <p class="photo-secondary">Приложение</p>
-            </div>
+        <li class="item">
+          <a href="/" class="photo-text">
+            <img src="./images/portfolio9.jpg" Width="370" alt="робота"/>
+            <dt class="photo-main">Growing Business</dt>
+            <p class="photo-secondary">Приложение</p>
           </a>
         </li>
       </ul>
     </section>
   </main>
-
+  
   <!-- supporting information -->
-  <footer class="footer">
-    <div class="container-footer">
-      <a href="./images/webStudio.jpg" class="logo footer"
-        >Web<span class="footer-studio">Studio</span></a
-      >
+    <footer>
+      <section class="footer conteiner">
+        <a href="./images/webStudio.jpg" class="logo">Web<span class="footer-studio">Studio</span></a>
       <adress>
-        <ul class="list footer-info">
-          <li>
-            <a
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="footer-adres"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="emailto:info@devstudio.com" class="footer-nav"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel=+380991111111" class="footer-nav">+380991111111</a>
-          </li>
-        </ul>
-      </adress>
-    </div>
-  </footer>
+      <ul class="list">
+        <li>
+          <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            target="_blank"
+            rel="noopener noreferrer" class="footer-adres">г. Киев, пр-т Леси Украинки, 26</a>
+        </li>
+        <li>
+          <a href="emailto:info@devstudio.com" class="footer-nav">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel=+380991111111" class="footer-nav">+380991111111</a>
+        </li>
+      </ul>
+  </adress>
+    </footer>
 </body>
