--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
   </header>
 
   <!-- list -->
-  <main>
-    <section class="button conteiner two-page">
+  <main class="main">
+    <section class="conteiner two-page">
         <ul class="list main">
           <li class="item"><button type="button" class="secondary">Всё</button></li>
           <li class="item"><button type="button" class="secondary">Веб-сайты</button></li>
