--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <!-- auth -->
       <ul class="site-auth list">
         <li class="item">
-          <a href="emailto:info@devstudio.com" class="link"
+          <a href="emailto:info@devstudio.com" class="link item-envel"
             >info@devstudio.com</a
           >
         </li>
         <li class="item">
-          <a href="tel=+380991111111" class="link">+380991111111</a>
+          <a href="tel=+380991111111" class="link item-smartp">+380991111111</a>
         </li>
       </ul>
     </div>
@@ -54,7 +54,7 @@
 
   <main>
     <!-- hero -->
-    <section class="content hero">
+    <section class="content hero Icon-Hero">
       <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
       <button class="primary" type="button">Заказать услугу</button>
     </section>
@@ -62,40 +62,28 @@
     <!-- approach in work -->
     <section class="content work">
       <ul class="list work conteiner">
-        <li class="item">
-          <div class="item2">
-            <!-- <img class="item3" src="./images/Vector.png" alt="вектор" width="70" /> -->
-          </div>
+        <li class="item icon1">
           <b class="work-main">Внимание к деталям</b>
           <p class="work-secondary">
             Идейные соображения, а также начало повседневной работы по
             формированию позиции.
           </p>
         </li>
-        <li class="item">
-          <div class="item2">
-            <!-- <img class="item3" src="./images/Vector (1).png" alt="вектор" width="70" /> -->
-          </div>
+        <li class="item icon2">
           <b class="work-main">Пунктуальность</b>
           <p class="work-secondary">
             Задача организации, в особенности же рамки и место обучения кадров
             влечет за собой.
           </p>
         </li>
-        <li class="item">
-          <div class="item2">
-            <!-- <img class="item3" src="./images/Vector (2).png" alt="вектор" width="70" /> -->
-          </div>
+        <li class="item icon3">
           <b class="work-main">Планирование</b>
           <p class="work-secondary">
             Равным образом консультация с широким активом в значительной степени
             обуславливает.
           </p>
         </li>
-        <li class="item">
-          <div class="item2">
-            <!-- <img class="item3" src="./images/Vector (3).png" alt="вектор" width="70" /> -->
-          </div>
+        <li class="item icon4">
           <b class="work-main">Современные технологии</b>
           <p class="work-secondary">
             Значимость этих проблем настолько очевидна, что реализация плановых
@@ -145,6 +133,28 @@
             <div class="employees-div">
               <h3 class="employees-main">Игорь Демьяненко</h3>
               <p class="employees-secondary">Product Designer</p>
+              <div class="div2">
+                <a href="/" class="item">
+                  <svg class="icon" width="20" heigth="20">
+                    <use href="./images/icon.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="/" class="item">
+                  <svg class="icon" width="20" heigth="20">
+                    <use href=""></use>
+                  </svg>
+                </a>
+                <a href="/" class="item">
+                  <svg class="icon" width="20" heigth="20">
+                    <use href=""></use>
+                  </svg>
+                </a>
+                <a href="/" class="item">
+                  <svg class="icon" width="20" heigth="20">
+                    <use href=""></use>
+                  </svg>
+                </a>
+              </div>
             </div>
           </li>
           <li class="fon">
@@ -152,6 +162,12 @@
             <div class="employees-div">
               <h3 class="employees-main">Ольга Репина</h3>
               <p class="employees-secondary">Frontend Developer</p>
+              <ul class="list">
+                <li class="item insta"><a href="/" class=""></a></li>
+                <li class="item twit"><a href="/" class=""></a></li>
+                <li class="item faceb"><a href="/" class=""></a></li>
+                <li class="item in"><a href="/" class=""></a></li>
+              </ul>
             </div>
           </li>
           <li class="fon">
@@ -159,6 +175,12 @@
             <div class="employees-div">
               <h3 class="employees-main">Николай Тарасов</h3>
               <p class="employees-secondary">Marketing</p>
+              <ul class="list">
+                <li class="item insta"><a href="/" class=""></a></li>
+                <li class="item twit"><a href="/" class=""></a></li>
+                <li class="item faceb"><a href="/" class=""></a></li>
+                <li class="item in"><a href="/" class=""></a></li>
+              </ul>
             </div>
           </li>
           <li class="fon">
@@ -166,22 +188,58 @@
             <div class="employees-div">
               <h3 class="employees-main">Михаил Ермаков</h3>
               <p class="employees-secondary">UI Designer</p>
+              <ul class="list">
+                <li class="item insta"><a href="/" class=""></a></li>
+                <li class="item twit"><a href="/" class=""></a></li>
+                <li class="item faceb"><a href="/" class=""></a></li>
+                <li class="item in"><a href="/" class=""></a></li>
+              </ul>
             </div>
           </li>
         </ul>
       </div>
+    </section>
+
+    <!-- permanent-clients -->
+    <section class="permanent-clients conteiner">
+      <h2 class="head-text">Постоянные клиенты</h2>
+      <ul class="list">
+        <li class="item">
+          <a>
+            <svg class="logo">
+              <use href="./images/icon.svg#icon-Logo"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item">
+          <a> </a>
+        </li>
+        <li class="item">
+          <a> </a>
+        </li>
+        <li class="item">
+          <a> </a>
+        </li>
+        <li class="item">
+          <a> </a>
+        </li>
+        <li class="item">
+          <a> </a>
+        </li>
+      </ul>
     </section>
   </main>
 
   <!-- <supporting information> -->
   <footer>
     <div class="footer conteiner">
-      <a href="./images/webStudio.jpg" class="logo">
-        Web
-        <span class="footer-studio"> Studio </span>
-      </a>
       <adress>
-        <ul class="list">
+        <a href="./images/webStudio.jpg" class="logo">
+          Web
+          <span class="footer-studio"> Studio </span>
+        </a>
+
+        <ul class="list nav">
           <li>
             <a
               href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -202,6 +260,15 @@
           </li>
         </ul>
       </adress>
+      <div class="dop-info">
+        <b class="main">ПРИСОЕДИНЯЙТЕСЬ</b>
+        <ul class="list">
+          <li class="item insta"><a href="/" class=""></a></li>
+          <li class="item twit"><a href="/" class=""></a></li>
+          <li class="item faceb"><a href="/" class=""></a></li>
+          <li class="item in"><a href="/" class=""></a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
