--- a/index.html
+++ b/index.html
@@ -133,7 +133,13 @@
             <div class="employees-div">
               <h3 class="employees-main">Игорь Демьяненко</h3>
               <p class="employees-secondary">Product Designer</p>
-              <div class="div2">
+              <ul class="list">
+                <li class="item insta"><a href="/" class=""></a></li>
+                <li class="item twit"><a href="/" class=""></a></li>
+                <li class="item faceb"><a href="/" class=""></a></li>
+                <li class="item in"><a href="/" class=""></a></li>
+              </ul>
+              <!-- <div class="div2">
                 <a href="/" class="item">
                   <svg class="icon" width="20" heigth="20">
                     <use href="./images/icon.svg#icon-instagram"></use>
@@ -154,7 +160,7 @@
                     <use href=""></use>
                   </svg>
                 </a>
-              </div>
+              </div> -->
             </div>
           </li>
           <li class="fon">
