--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     referrerpolicy="no-referrer"
   />
   <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./images/icons.svg" />
 </head>
 <body>
   <header class="">
@@ -133,34 +134,34 @@
             <div class="employees-div">
               <h3 class="employees-main">Игорь Демьяненко</h3>
               <p class="employees-secondary">Product Designer</p>
-              <ul class="list">
+              <!-- <ul class="list">
                 <li class="item insta"><a href="/" class=""></a></li>
                 <li class="item twit"><a href="/" class=""></a></li>
                 <li class="item faceb"><a href="/" class=""></a></li>
                 <li class="item in"><a href="/" class=""></a></li>
-              </ul>
-              <!-- <div class="div2">
+              </ul> -->
+              <div class="div2">
                 <a href="/" class="item">
-                  <svg class="icon" width="20" heigth="20">
-                    <use href="./images/icon.svg#icon-instagram"></use>
+                  <svg class="icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
                 <a href="/" class="item">
-                  <svg class="icon" width="20" heigth="20">
+                  <svg class="icon" width="20" height="20">
                     <use href=""></use>
                   </svg>
                 </a>
                 <a href="/" class="item">
-                  <svg class="icon" width="20" heigth="20">
+                  <svg class="icon" width="20" height="20">
                     <use href=""></use>
                   </svg>
                 </a>
                 <a href="/" class="item">
-                  <svg class="icon" width="20" heigth="20">
+                  <svg class="icon" width="20" height="20">
                     <use href=""></use>
                   </svg>
                 </a>
-              </div> -->
+              </div>
             </div>
           </li>
           <li class="fon">
@@ -269,7 +270,9 @@
       <div class="dop-info">
         <b class="main">ПРИСОЕДИНЯЙТЕСЬ</b>
         <ul class="list">
-          <li class="item insta"><a href="/" class=""></a></li>
+          <li class="item insta">
+            <a href="/" class=""></a>
+          </li>
           <li class="item twit"><a href="/" class=""></a></li>
           <li class="item faceb"><a href="/" class=""></a></li>
           <li class="item in"><a href="/" class=""></a></li>
