--- a/index.html
+++ b/index.html
@@ -251,27 +251,27 @@
               <ul class="list">
                 <li class="item">
                   <a href="/" class="items" >
-                    <svg class="icon" width="20" height="20">
+                    <svg class="icon" >
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item">
                   <a href="/" class="items">
-                    <svg class="icon" width="20" height="20">
+                    <svg class="icon" >
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 <li class="item">
                   <a href="/" class="items">
-                    <svg class="icon" width="20" height="20">
+                    <svg class="icon" >
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item">
                   <a href="/" class="items">
-                    <svg class="icon" width="20" height="20">
+                    <svg class="icon" >
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
