--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <ul class="site-auth list">
         <li class="item">
           <a href="emailto:info@devstudio.com" class="link">
-            <svg class="item">
+            <svg class="items">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
@@ -51,7 +51,7 @@
         </li>
         <li class="item">
           <a href="tel=+380991111111" class="link">
-            <svg class="item">
+            <svg class="items">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
             +380991111111</a>
